# thoughtcli

./: .pre-commit-config.yaml  README.md  pyproject.toml
thoughtcli/: __init__.py  connection.py
